--- a/package.json
+++ b/package.json
@@ -9,19 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/auth-helpers-nextjs": "^0.5.6",
-    "@supabase/auth-helpers-react": "^0.3.1",
-    "@supabase/auth-ui-react": "^0.3.5",
-    "@supabase/auth-ui-shared": "^0.1.3",
-    "@supabase/supabase-js": "^2.12.1",
-    "@types/node": "18.15.5",
+    "@chakra-ui/icons": "^2.0.17",
+    "@chakra-ui/react": "^2.5.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@supabase/auth-helpers-nextjs": "^0.5.4",
+    "@supabase/supabase-js": "^2.8.0",
+    "classnames": "^2.3.2",
+    "encoding": "^0.1.13",
+    "formik": "^2.2.9",
+    "framer-motion": "^10.2.5",
+    "next": "^13.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.5",
+    "react-icons": "^4.8.0",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
+    "@types/node": "18.15.2",
     "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.0.2"
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.31.0",
+    "eslint-config-acme": "^2.0.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.1",
+    "prettier-plugin-tailwindcss": "^0.2.1",
+    "tailwindcss": "^3.2.7",
+    "typescript": "4.9.5"
   }
 }
