--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
     "react-icons": "^4.8.0",
+    "swr": "^2.1.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
