--- a/package.json
+++ b/package.json
@@ -13,17 +13,21 @@
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@mui/material": "^5.11.15",
     "@supabase/auth-helpers-nextjs": "^0.5.4",
     "@supabase/supabase-js": "^2.8.0",
     "classnames": "^2.3.2",
     "encoding": "^0.1.13",
     "formik": "^2.2.9",
     "framer-motion": "^10.2.5",
+    "material-ui-search-bar": "^1.0.0",
     "next": "^13.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
     "react-icons": "^4.8.0",
+    "server-only": "^0.0.1",
     "swr": "^2.1.1",
     "yup": "^0.32.11"
   },
