--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@faker-js/faker": "^7.6.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@heroicons/react": "v1",
     "@mui/material": "^5.11.15",
     "@supabase/auth-helpers-nextjs": "^0.5.4",
     "@supabase/supabase-js": "^2.8.0",
+    "@tanstack/match-sorter-utils": "^8.8.4",
+    "@tanstack/react-table": "^8.8.4",
+    "@tanstack/table-core": "^8.8.4",
+    "@types/react-table": "^7.7.14",
     "classnames": "^2.3.2",
     "encoding": "^0.1.13",
     "formik": "^2.2.9",
@@ -27,6 +33,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
     "react-icons": "^4.8.0",
+    "react-table": "^7.7.0",
     "server-only": "^0.0.1",
     "swr": "^2.1.1",
     "yup": "^0.32.11"
