--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tanstack/table-core": "^8.8.4",
     "@types/react-table": "^7.7.14",
     "classnames": "^2.3.2",
+    "date-fns": "^2.29.3",
     "encoding": "^0.1.13",
     "formik": "^2.2.9",
     "framer-motion": "^10.2.5",
