--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@heroicons/react": "v1",
     "@mui/material": "^5.11.15",
     "@supabase/auth-helpers-nextjs": "^0.5.4",
+    "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/supabase-js": "^2.8.0",
     "@tanstack/match-sorter-utils": "^8.8.4",
     "@tanstack/react-table": "^8.8.4",
@@ -34,7 +35,10 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
     "react-icons": "^4.8.0",
+    "react-select": "^5.7.2",
     "react-table": "^7.7.0",
+    "react-tailwindcss-select": "^1.8.5",
+    "react-toastify": "^9.1.2",
     "server-only": "^0.0.1",
     "swr": "^2.1.1",
     "yup": "^0.32.11"
